# time-tracker-invoice-generator

./: Dockerfile  README.md  config.py  pyproject.toml
app/: __init__.py  database.py  dependencies.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/routers/: __init__.py  auth.py
app/core/: user.py
app/cruds/: base.py  user.py
app/database/: __init__.py  collections.py  mongodb.py
app/enums/: __init__.py  subscription.py
app/helpers/: log_helper.py  logging.py
app/models/: base.py  brand.py  company.py  subscription.py  user.py
app/routers/: __init__.py  auth.py  user.py
app/schemas/: base.py  brand.py  company.py  user.py
local/: docker-compose.yml
