[tool.poetry]
name = "time-tracker-invoice-generator"
version = "0.1.0"
description = "A SaaS application for tracking freelancer billable hours and generating invoices."
authors = ["Ahmet Kutay Ural"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "4.9.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
motor = "^3.6.0"
aioredis = "^2.0.1"
kafka-python = "^2.0.2"
pydantic = "^2.10.2"
python-decouple = "^3.8"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
mongoengine = "^0.29.1"
email-validator = "^2.2.0"
jwt = "^1.3.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
